--- a/.github/workflows/builds_deployer.yml
+++ b/.github/workflows/builds_deployer.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'builds/**'
       - 'shared/**'
+      - '.github/workflows/builds_deployer.yml'
 jobs:
   build:
     runs-on: ubuntu-latest
