--- a/builds/app.yaml
+++ b/builds/app.yaml
@@ -7,3 +7,6 @@ handlers:
     static_dir: public/static
   - url: /.*
     script: auto
+automatic_scaling:
+  max_instances: 2
+  max_idle_instances: 1
