--- a/shared/package.json
+++ b/shared/package.json
@@ -11,6 +11,7 @@
         "react-dom": "^17.0.1",
         "styled-components": "^5.2.1"
     },
+    "main": "src/index.ts",
     "devDependencies": {
         "@babel/core": "^7.12.9",
         "@types/node": "^14.14.10",
