--- a/paste/package.json
+++ b/paste/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@enginehub/schematicwebviewer": "^1.2.0",
         "@google-cloud/storage": "^5.7.0",
+        "@react-hook/media-query": "^1.1.1",
         "@types/styled-components": "^5.1.5",
         "axios": "^0.21.0",
         "next": "^10.0.3",
