--- a/main-site/package.json
+++ b/main-site/package.json
@@ -7,11 +7,11 @@
     "dependencies": {
         "@svgr/webpack": "^5.5.0",
         "@types/styled-components": "^5.1.9",
-        "gatsby": "^2.32.8",
-        "gatsby-plugin-google-analytics": "^2.11.0",
-        "gatsby-plugin-image": "^0.7.2",
-        "gatsby-plugin-styled-components": "^3.10.0",
-        "gatsby-plugin-svgr": "^2.1.0",
+        "gatsby": "^3.1.0",
+        "gatsby-plugin-google-analytics": "^3.1.0",
+        "gatsby-plugin-image": "^1.1.0",
+        "gatsby-plugin-styled-components": "^4.1.0",
+        "gatsby-plugin-svgr": "^3.0.0-beta.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
@@ -22,20 +22,20 @@
     "devDependencies": {
         "@types/react": "^17.0.3",
         "@types/react-helmet": "^6.1.0",
-        "gatsby-plugin-manifest": "^2.12.1",
-        "gatsby-plugin-netlify": "^2.11.0",
-        "gatsby-plugin-react-helmet": "^3.10.0",
+        "gatsby-plugin-manifest": "^3.1.0",
+        "gatsby-plugin-netlify": "^3.1.0",
+        "gatsby-plugin-react-helmet": "^4.1.0",
         "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
         "gatsby-plugin-robots-txt": "^1.5.5",
-        "gatsby-plugin-sharp": "^2.14.3",
-        "gatsby-plugin-sitemap": "^2.12.0",
-        "gatsby-source-filesystem": "^2.11.1",
-        "gatsby-transformer-sharp": "^2.12.0",
+        "gatsby-plugin-sharp": "^3.1.0",
+        "gatsby-plugin-sitemap": "^3.1.0",
+        "gatsby-source-filesystem": "^3.1.0",
+        "gatsby-transformer-sharp": "^3.1.0",
         "lint-staged": "^10.5.4",
         "prettier": "^2.2.1",
         "tsconfig": "^7.0.0",
         "tsconfig-paths": "^3.9.0",
-        "tsconfig-paths-webpack-plugin": "^3.3.0",
+        "tsconfig-paths-webpack-plugin": "^3.5.1",
         "tslint": "^6.1.3",
         "tslint-react": "^5.0.0",
         "tslint-sonarts": "^1.9.0",
