--- a/paste/package.json
+++ b/paste/package.json
@@ -9,6 +9,7 @@
         "@google-cloud/storage": "^5.8.1",
         "@types/styled-components": "^5.1.9",
         "axios": "^0.21.1",
+        "base64-js": "^1.5.1",
         "next": "^10.0.9",
         "next-images": "^1.7.0",
         "next-server": "^9.0.5",
