--- a/paste/package.json
+++ b/paste/package.json
@@ -13,7 +13,7 @@
         "next": "^10.2.0",
         "next-images": "^1.7.0",
         "next-server": "^9.0.5",
-        "next-transpile-modules": "^7.0.0",
+        "next-transpile-modules": "4.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
