--- a/.github/workflows/golf_deployer.yml
+++ b/.github/workflows/golf_deployer.yml
@@ -35,6 +35,7 @@ jobs:
       run: |
         npm install -g yarn serverless
         yarn
+        yarn workspace @enginehub/shared run prepare
         yarn workspace worldedit-golf type-check
         yarn workspace worldedit-golf deploy
       env:
