--- a/golf/package.json
+++ b/golf/package.json
@@ -10,9 +10,11 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.35",
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@fortawesome/react-fontawesome": "^0.1.14",
+        "@google-cloud/firestore": "^4.13.0",
         "@types/styled-components": "^5.1.10",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
+        "csv-parser": "^3.0.0",
         "got": "^11.8.2",
         "gzip-js": "^0.3.2",
         "jsonwebtoken": "^8.5.1",
@@ -34,7 +36,6 @@
         "@types/react-dom": "^17.0.8",
         "@types/safe-compare": "^1.1.0",
         "@types/shortid": "^0.0.29",
-        "aws-sdk": "^2.936.0",
         "babel-loader": "^8.2.2",
         "babel-plugin-styled-components": "^1.13.1",
         "tslint": "^6.1.3",
