--- a/builds/package.json
+++ b/builds/package.json
@@ -24,6 +24,10 @@
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "babel-plugin-styled-components": "^2.0.2",
+        "eslint-config-next": "12.1.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.5.1",
         "typescript": "^4.5.5"
     },
     "keywords": [
@@ -39,7 +43,7 @@
         "build": "next build",
         "start": "next start -p $PORT",
         "type-check": "tsc --project ./tsconfig.json --noEmit",
-        "lint": "tslint --config ./tslint.json --project ./tsconfig.json",
-        "lint:fix": "tslint --config ./tslint.json --project ./tsconfig.json --fix"
+        "lint": "next lint",
+        "lint:fix": "next lint --fix"
     }
 }
