--- a/golf/package.json
+++ b/golf/package.json
@@ -27,7 +27,6 @@
         "zlibt": "0.0.5"
     },
     "devDependencies": {
-        "@babel/core": "^7.17.5",
         "@types/gzip-js": "^0.3.3",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/node": "^17.0.18",
@@ -35,10 +34,10 @@
         "@types/react-dom": "^17.0.11",
         "@types/safe-compare": "^1.1.0",
         "@types/shortid": "^0.0.29",
-        "babel-loader": "^8.2.3",
-        "babel-plugin-styled-components": "^2.0.2",
-        "tslint": "^6.1.3",
-        "tslint-react": "^5.0.0",
+        "eslint-config-next": "^12.1.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.5.1",
         "typescript": "^4.5.5"
     },
     "keywords": [
@@ -53,7 +52,7 @@
         "build": "next build",
         "start": "next start",
         "type-check": "tsc --project ./tsconfig.json --noEmit",
-        "lint": "tslint --config ./tslint.json --project ./tsconfig.json",
-        "lint:fix": "tslint --config ./tslint.json --project ./tsconfig.json --fix"
+        "lint": "next lint",
+        "lint:fix": "next lint --fix"
     }
 }
