--- a/shared/package.json
+++ b/shared/package.json
@@ -17,22 +17,23 @@
         "@types/node": "^17.0.18",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.12.0",
+        "@typescript-eslint/parser": "^5.12.0",
         "declaration-bundler-webpack-plugin": "git://github.com/clipchamp/declaration-bundler-webpack-plugin",
+        "eslint": "^8.9.0",
+        "eslint-config-next": "^12.1.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "lint-staged": "^12.3.4",
+        "prettier": "^2.5.1",
         "source-map-loader": "^3.0.1",
         "ts-loader": "^9.2.6",
         "tsconfig": "^7.0.0",
-        "tslint": "^6.1.3",
-        "tslint-react": "^5.0.0",
         "typescript": "^4.5.5",
         "webpack": "^5.69.1",
         "webpack-cli": "^4.9.2"
-    },
-    "lint-staged": {
-        "./**/*.{ts,tsx}": [
-            "tslint --project ./tsconfig.json --config ./tslint.json --fix",
-            "git add"
-        ]
     },
     "keywords": [
         "enginehub",
@@ -42,8 +43,8 @@
     ],
     "scripts": {
         "type-check": "tsc --project ./tsconfig.json --noEmit",
-        "lint": "tslint --config ./tslint.json --project ./tsconfig.json",
-        "lint:fix": "tslint --config ./tslint.json --project ./tsconfig.json --fix",
+        "lint": "eslint --config ./.eslintrc.js --ext .ts,.tsx src/",
+        "lint:fix": "eslint --config ./.eslintrc.js --fix --ext .ts,.tsx src/",
         "prepare": "npx webpack"
     }
 }
