--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,12 @@ build
 
 # Webpack
 dist/
+
+# Yarn 3
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
