--- a/main-site/package.json
+++ b/main-site/package.json
@@ -38,18 +38,11 @@
         "gatsby-plugin-sitemap": "^5.7.0",
         "gatsby-source-filesystem": "^4.7.0",
         "gatsby-transformer-sharp": "^4.7.0",
-        "lint-staged": "^12.3.4",
         "prettier": "^2.5.1",
         "tsconfig": "^7.0.0",
         "typescript": "^4.5.5"
     },
-    "keywords": [
-        "gatsby",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["gatsby", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "build": "gatsby build",
         "develop": "gatsby develop",
