--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "husky": "^7.0.4",
+        "lint-staged": "^12.3.5",
         "patch-package": "^6.4.7",
         "postinstall-postinstall": "^2.1.0"
     },
