--- a/builds/package.json
+++ b/builds/package.json
@@ -9,8 +9,8 @@
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
-        "@types/styled-components": "^5.1.23",
-        "axios": "^0.26.0",
+        "@types/styled-components": "^5.1.24",
+        "axios": "^0.26.1",
         "moment": "^2.29.1",
         "next": "^12.1.0",
         "next-images": "^1.8.4",
@@ -20,22 +20,16 @@
         "styled-components": "^5.3.3"
     },
     "devDependencies": {
-        "@types/node": "^17.0.18",
-        "@types/react": "^17.0.39",
-        "@types/react-dom": "^17.0.11",
+        "@types/node": "^17.0.21",
+        "@types/react": "^17.0.40",
+        "@types/react-dom": "^17.0.13",
         "eslint-config-next": "12.1.0",
-        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "^2.5.1",
-        "typescript": "^4.5.5"
+        "typescript": "^4.6.2"
     },
-    "keywords": [
-        "nextjs",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "dev": "next",
         "clean": "rm -rf build",
