--- a/golf/package.json
+++ b/golf/package.json
@@ -11,8 +11,8 @@
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
         "@google-cloud/firestore": "^5.0.2",
-        "@types/styled-components": "^5.1.23",
-        "axios": "^0.26.0",
+        "@types/styled-components": "^5.1.24",
+        "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
         "got": "^12.0.1",
         "gzip-js": "^0.3.2",
@@ -29,24 +29,18 @@
     "devDependencies": {
         "@types/gzip-js": "^0.3.3",
         "@types/jsonwebtoken": "^8.5.8",
-        "@types/node": "^17.0.18",
-        "@types/react": "^17.0.39",
-        "@types/react-dom": "^17.0.11",
+        "@types/node": "^17.0.21",
+        "@types/react": "^17.0.40",
+        "@types/react-dom": "^17.0.13",
         "@types/safe-compare": "^1.1.0",
         "@types/shortid": "^0.0.29",
         "eslint-config-next": "^12.1.0",
-        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "^2.5.1",
-        "typescript": "^4.5.5"
+        "typescript": "^4.6.2"
     },
-    "keywords": [
-        "nextjs",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "dev": "next",
         "build": "next build",
