--- a/paste/package.json
+++ b/paste/package.json
@@ -15,8 +15,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sharp": "^0.32.3",
-        "shortid": "^2.2.16",
-        "styled-components": "^6.0.4"
+        "shortid": "^2.2.16"
     },
     "devDependencies": {
         "@types/node": "^18.16.19",
