--- a/shared/package.json
+++ b/shared/package.json
@@ -35,7 +35,6 @@
     "dependencies": {
         "next": "^13.4.10",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "styled-components": "^6.0.4"
+        "react-dom": "^18.2.0"
     }
 }
