--- a/builds/package.json
+++ b/builds/package.json
@@ -12,18 +12,17 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "got": "^13.0.0",
         "moment": "^2.29.4",
-        "next": "^13.4.10",
+        "next": "^13.4.11",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sharp": "^0.32.3",
-        "styled-components": "^6.0.4"
+        "sharp": "^0.32.4"
     },
     "devDependencies": {
         "@types/node": "^18.16.19",
         "@types/react": "18.2.15",
         "@types/react-dom": "18.2.7",
         "eslint": "^8.45.0",
-        "eslint-config-next": "13.4.10",
+        "eslint-config-next": "13.4.11",
         "postcss-preset-env": "^9.0.0",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6"
