--- a/builds/package.json
+++ b/builds/package.json
@@ -7,25 +7,25 @@
     "type": "module",
     "dependencies": {
         "@enginehub/shared": "workspace:*",
-        "@fortawesome/fontawesome-svg-core": "^6.4.2",
-        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "got": "^13.0.0",
-        "moment": "^2.29.4",
-        "next": "^13.5.6",
+        "moment": "^2.30.1",
+        "next": "^14.0.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sharp": "^0.32.6"
+        "sharp": "^0.33.1"
     },
     "devDependencies": {
-        "@types/node": "^18.18.7",
-        "@types/react": "18.2.33",
-        "@types/react-dom": "18.2.14",
-        "eslint": "^8.52.0",
-        "eslint-config-next": "13.5.6",
-        "postcss-preset-env": "^9.2.0",
-        "prettier": "^3.0.3",
-        "typescript": "^5.2.2"
+        "@types/node": "^18.19.4",
+        "@types/react": "18.2.46",
+        "@types/react-dom": "18.2.18",
+        "eslint": "^8.56.0",
+        "eslint-config-next": "^14.0.4",
+        "postcss-preset-env": "^9.3.0",
+        "prettier": "^3.1.1",
+        "typescript": "^5.3.3"
     },
     "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
